--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl-PL">
     <head>
         <meta charset="UTF-8">
+        <title>Rewalbud - Profesjonalne usługi remontowe w twojej okolicy!</title>
+        <meta name="description" content="Zajmujemy się kompleksowym wykonywaniem prac remontowych i budowlanych w mieszkaniach a także biurach. Potrzebujesz fachowców? Napisz do nas: kontakt@rewalbud.pl">
+        <meta name="author" content="Kuba Korniluk">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Rewal-Bud</title>
+        <meta name="theme-color" content="#c59f3d">
+        <meta name="robots" content="index, follow">
+        <meta property="og:locale" content="pl_PL">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Rewal-Bud - Profesjonalne usługi remontowe w twojej okolicy!">
+        <meta property="og:description" content="Zajmujemy się kompleksowym wykonywaniem prac remontowych i budowlanych w mieszkaniach a także biurach. Potrzebujesz fachowców? Napisz do nas: kontakt@rewalbud.pl">
+        <meta property="og:image" content="">
+        <meta property="og:url" content="http://rewalbud.pl/">
+        <link rel="icon" href="">
+        <link rel="canonical" href="http://rewalbud.pl/">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="root"></div>
