cleaned code and edited readme.md

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Rewal-Bud - Profesjonalne usługi remontowe w twojej okolicy!">
         <meta property="og:description" content="Zajmujemy się kompleksowym wykonywaniem prac remontowych i budowlanych w mieszkaniach a także biurach. Potrzebujesz fachowców? Napisz do nas: kontakt@rewalbud.pl">
-        <meta property="og:image" content="">
+        <meta property="og:image" content="./src/assets/img/header_background.jpeg">
         <meta property="og:url" content="http://rewalbud.pl/">
         <link rel="icon" href="">
         <link rel="canonical" href="http://rewalbud.pl/">
