--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
         <meta property="og:url" content="http://rewalbud.pl/">
         <link rel="icon" href="">
         <link rel="canonical" href="http://rewalbud.pl/">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> -->
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
     </head>
     <body>
         <div id="root"></div>
